# prune-backup

./: .retention.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PROMPT.md  README.md  justfile
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
tests/: integration.rs
