[package]
name = "prune-backup"
version = "0.1.0"
edition = "2021"
description = "Prune backup files based on retention policies, keeping recent files and moving old ones to trash"
license = "MIT"
repository = "https://github.com/junzh0u/prune-backup"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
anyhow = "1"
trash = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
shell-escape = "0.1"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
